# yok3x

./: .gitattributes  .gitignore
yok3x/: ADOPTIONS.md  HISTORY.md  README.md  RULE.md  pyproject.toml  yok3x.py
yok3x/gui/: index.html
yok3x/reports/: v3.2.0-plan-adaptive-degradation-2026-07-10.md  v3.3.0-plan-situational-model-profiles-2026-07-11.md  v3.4.0-fallback-hardcoding-audit-2026-07-13.md  v3.4.0-models-usage-version-audit-2026-07-13-1445.md  v3.4.0-plan-zed-acp-integration-2026-07-11.md  v3.5.0-assessment-aris-adversarial-mode-2026-07-11.md  v3.5.0-assessment-lightrag-2026-07-11.md  v3.5.0-assessment-mem0-2026-07-13.md  v3.5.0-knot-consolidation-2026-07-13-1600.md  v3.5.0-plan-p3-offline-fallback-2026-07-13-1520.md  v3.6.0-plan-daily-weekly-pacing-2026-07-13.md  v3.7.0-plan-per-task-console-2026-07-14.md  v3.8.0-plan-gui-task-crud-2026-07-14.md  v3.9.0-plan-claude-token-refresh-2026-07-14.md  v3.x-analysis-langgraph-mcp-2026-07-14.md  v3.x-assessment-claude-token-refresh-2026-07-14.md  v4.0.0-plan-conditional-routing-2026-07-15.md  v4.1.0-plan-mcp-worker-tools-2026-07-15.md
yok3x/reports/bugs/: BUG-01-shared-mutable-default.md  BUG-02-version-drift.md  BUG-03-stall-signal-weak.md  BUG-04-cli-stdin-deadlock.md  BUG-05-codex-jsonl-parser.md  BUG-06-mat-oauth-label.md  BUG-07-run-id-collision.md  BUG-08-worker-cwd-contamination.md  BUG-09-gemini-skip-trust.md  README.md  (+9 more)
yok3x/tests/: test_yok3x.py
yok3x/yok3x/: __init__.py  _version.py  backends.py  cli.py  config.py  guiserver.py  knot.py  limits.py  matview.py  orchestrator.py  usage.py
(+42 files in other folders)
